# rvcore

./: .gitignore  .svlint.toml  CMakeLists.txt  README.md  ooo_core.gtkw
cache/rtl/: axi_memory.sv  d_cache_with_memory.sv
cache/test/: d_cache_test.cpp  i_cache_test.cpp
core/: CMakeLists.txt  README.md
core/memo/: memory_wave.json
core/rtl/: Makefile  core.sv  csr_reg.sv  decoder.sv  execute.sv  memory.sv  memory_access.sv  memory_map.sv  regfile.sv  riscv_instr.sv  top.sv  write_back.sv
core/rtl/include/: common.sv  riscv_instr.sv
core/sample_src/: Makefile  test.S  test.c
core/sample_src/riscv-tests/share/riscv-tests/benchmarks/: dhrystone.riscv  median.riscv  memcpy.riscv  mm.riscv  qsort.riscv  vec-daxpy.riscv  vec-memcpy.riscv
core/test/: Makefile  core_test.cpp  cpu_test.cpp  memory_test.cpp  memory_test.gtkw  model_tester.hpp  top_test.cpp
memo/: design.drawio
rtl/: Makefile  axi_memory.sv  bram.sv  common.sv  cpu.sv  cpu_sim.vcd  csr_reg.sv  d_cache.sv  decoder.sv  direct_map.sv  execute.sv  fifo.sv  i_cache.sv  i_cache_with_memory.sv  inst.sverilog  memory_access.sv  memory_map.sv  set_asociative.sv  top.sv  write_back.sv
rtl/cache/: bram.sv  d_cache.sv  direct_map.sv
rtl/common/: fifo.sv  fifoIf.sv  fifoWrapper.sv
rtl/core/: alu.sv  branchPredictor.sv  core.sv  decoder.sv  execute.sv  freelist.sv  freelistIf.sv  freelistWrapper.sv  hazard.sv  isqDispatchIf.sv  isqIssueIf.sv  isqWbIf.sv  issueQueue.sv  issueQueueIf.sv  issueQueueWrapper.sv  op2ValidLogic.sv  regfile.sv  rob.sv  robCommitIf.sv  robDispatchIf.sv  robIf.sv  robOpFetchIf.sv  robWbIf.sv  robWrapper.sv  rvcore.vim  write_back.sv
rtl/core/include/: common.sv  inst.sverilog  parameter.sv  parameters.sv
sample_src/: Makefile  fib.S  link.ld  program.txt  spike.dbg  start.S  test.S  test.c
sample_src/benchmark/coremark/: README.md  diff.patch  start.S
sample_src/riscv-tests/: tohex.sh
sample_src/riscv-tests/share/riscv-tests/benchmarks/: mt-matmul.riscv  mt-memcpy.riscv  mt-vvadd.riscv  multiply.riscv  pmp.riscv  rsort.riscv  spmv.riscv  towers.riscv  vec-sgemm.riscv  vec-strcmp.riscv  vvadd.riscv
test/: .clangd  axi_memory_test.cpp  cpu_test.cpp  d_cache_test.cpp  direct_map_test.cpp  fifo_test.cpp  i_cache_test.cpp  top_test.cpp
test/common/: fifo_test.cpp  model_tester.hpp
test/core/: branch_predictor_test.cpp  core_test.cpp  freelist_test.cpp  issue_queue_test.cpp  memory_test.cpp  rob_test.cpp  rvcore.cpp  top_test.cpp
